--- a/downloads.html
+++ b/downloads.html
@@ -40,14 +40,14 @@
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Đóng cửa sổ" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
-            <div data-tooltip-text="Phóng to cửa sổ" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
-            <div data-tooltip-text="Ẩn cửa sổ" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
+            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
+            <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
+            <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
             <div class="border5"></div>
         </div>
         </script>
         <div class="instances" id="instances" style="position: relative; top: 0; margin-left: 10px; margin-top: 5px;">
-            tính năng này hiện chưa hoàn thiện :'(
+            This feature is not yet ready for use.
         </div>
         <div>
             <script>
