--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Lịch sử</title>
+    <title>History</title>
     <link href="css/history.css" rel="stylesheet" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <link href="js/materialdesign/css/materialdesign.css" rel="stylesheet" type="text/css" />
@@ -30,11 +30,11 @@
     <div class="actionbar">
         <div class="normal">
             <div class="toolbar">
-                <div class="title" style="font-size: 18px">Lịch sử</div>
+                <div class="title" style="font-size: 18px">History</div>
                 <div class="search-bar">
                     <div class="search-box">
                         <i style="font-size:19px;" class="material-icons search-icon">search</i>
-                        <div class="hint">Tìm kiếm dữ liệu duyệt web của bạn...</div>
+                        <div class="hint">Search</div>
                         <input class="search-input"></input>
                     </div>
                 </div>
@@ -43,9 +43,9 @@
         <div class="selected">
             <div class="center">
                 <div class="icon-button ripple-icon" id="unselect-btn"><i class="material-icons">close</i></div>
-                <div class="selected-items-text">Đang chọn: 0</div>
-                <div class="flat-button ripple" id="delete-btn">XOÁ</div>
-                <div class="flat-button ripple" id="cancel-btn">HUỶ</div>
+                <div class="selected-items-text">Selected items: 0</div>
+                <div class="flat-button ripple" id="delete-btn">DELETE</div>
+                <div class="flat-button ripple" id="cancel-btn">CANCEL</div>
             </div>
         </div>
     </div>
