--- a/index.html
+++ b/index.html
@@ -496,13 +496,13 @@
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Đóng" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
-            <div data-tooltip-text="Phóng to" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
-            <div data-tooltip-text="Ẩn" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
-            <div data-tooltip-text="Ứng dụng" data-tooltip-position="bottom" class="windowbutton windowbutton-extensions"></div>
+            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
+            <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
+            <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
+            <div data-tooltip-text="Apps" data-tooltip-position="bottom" class="windowbutton windowbutton-extensions"></div>
             <div class="tabbar" id="tabbar">
                 <div class="addTabBtn" id="addTab">
-                    <i class="material-icons" style="font-size: 22px; margin-top: 3px; margin-left: 5px;" data-tooltip-text="Thẻ mới (Ctrl + T)" data-tooltip-position="bottom">add</i>
+                    <i class="material-icons" style="font-size: 22px; margin-top: 3px; margin-left: 5px;" data-tooltip-text="New tab (Ctrl + T)" data-tooltip-position="bottom">add</i>
                 </div>
             </div>
             <div class="border5"></div>
@@ -877,7 +877,7 @@
                                     width="64" height="64" alt="" />
                             </a>
                         </li>
-                    </ul> <a href="#" draggable="false" class="more">Xem thêm</a>
+                    </ul> <a href="#" draggable="false" class="more">More</a>
 
                     <ul class="second-set hide">
                         <li>
