--- a/reader/index.html
+++ b/reader/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="readerView.css" />
 </head>
 <body>
-	<div class="backtoarticle" id="backtoarticle">  Trở về trang gốc </div>
+	<div class="backtoarticle" id="backtoarticle">  Back to normal view </div>
 	<script src="reader.js"></script>
 </body>
 </html>
