--- a/licenses.html
+++ b/licenses.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Danh sách các đóng góp</title>
+  <title>Credits</title>
   <style>
     html,
     body {
@@ -51,25 +51,25 @@
 </head>
 
 <body>
-  <h1 class="title">Danh sách các đóng góp của các tác giả (đồng tác giả) KT Browser</h1>
+  <h1 class="title">Credits</h1>
   <section class="container">
     <ul>
       <li class="list-item">
-        <a href="http://kt-browser.com">Nguyễn Anh Khoa - KT Browser và Cena</a>
+        <a href="http://kt-browser.com">Khoa Nguyen Anh - KT Browser for PC and Cena</a>
       </li>
       <li class="list-item">
-        <a href="https://play.google.com/store/apps/details?id=kttech.software.ktbrowser">Thuận Võ - KT Browser dành cho Android</a>
+        <a href="https://play.google.com/store/apps/details?id=kttech.software.ktbrowser">Thuan Vo - KT Browser for Android</a>
       </li>
       <li class="list-item">
-        <a href="https://www.youtube.com/channel/UCIfx8IV6VW8VP7ncVkKaUsA">Nguyễn Minh Trí - Designer (Banner, Intro,...)</a>
+        <a href="https://www.youtube.com/channel/UCIfx8IV6VW8VP7ncVkKaUsA">Tri Nguyen Minh - Designer</a>
       </li>
       <li class="list-item-dai">
-        <a href="https://github.com/Sential/WebExpress2">Eryk Rakowski (Sential) và Mikołaj Palkiewicz (xNerhu22) - WebExpress2 (MIT License)</a>
+        <a href="https://github.com/Sential/WebExpress2">Eryk Rakowski (Sential) and Mikołaj Palkiewicz (xNerhu22) - WebExpress2 (MIT License)</a>
       </li>
     </ul>
   </section>
 
-  <h1 class="title">Danh sách các tác giả của các script có trên KT Browser</h1>
+  <h1 class="title">List of scripts used and their authors</h1>
   <section class="container">
     <ul>
       <li class="list-item-dai">
@@ -79,7 +79,7 @@
         <a href="https://github.com/mozilla/readability">Readability.js (Apache License 2.0)</a>
       </li>
       <li class="list-item">
-        <a href="https://github.com/minbrowser/min">Min Browser - Reader Mode (Apache License 2.0)</a>
+        <a href="https://github.com/minbrowser/min">Min Browser - Reader View (Apache License 2.0)</a>
       </li>
       <li class="list-item">
         <a href="https://github.com/minbrowser/min">Min Browser - ADBlock Script (Apache License 2.0)</a>
@@ -90,7 +90,7 @@
     </ul>
   </section>
 
-  <h1 class="title">Danh sách các phần mềm nguồn mở KT Browser sử dụng</h1>
+  <h1 class="title">List of open source softwares used</h1>
   <section class="container">
     <ul>
       <li class="list-item">
