--- a/weather.html
+++ b/weather.html
@@ -257,9 +257,9 @@
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Đóng cửa sổ" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
-            <div data-tooltip-text="Phóng to cửa sổ" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
-            <div data-tooltip-text="Ẩn cửa sổ" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
+            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
+            <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
+            <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
             <div class="border5"></div>
         </div>
         </script>
