--- a/about.html
+++ b/about.html
@@ -4,20 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/jquery-ui.css" />
-    <link rel="stylesheet" type="text/css" href="css/jquery.msgBox.min.css">
     <link href="css/material-icons.css" rel="stylesheet">
+    <script src="material.min.js"></script>
+    <link rel="stylesheet" href="material.indigo-blue.min.css" />
     <link rel="stylesheet" href="js/materialdesign/css/materialdesign.css" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery/jquery-3.1.0.min.js" onload="window.$ = window.jQuery = module.exports;"></script>    
     <style>
-        body {
-            background-image: url("icon.ico");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-        }
-    </style>
-    <style>
+@font-face {
+font-family: "Roboto";
+src: url('fonts/Roboto.ttf');
+}
+
+@font-face {
+font-family: Roboto-Medium;
+src: url('fonts/Roboto-Medium.ttf');
+}
+
+@font-face {
+font-family: Roboto-Light;
+src: url('fonts/Roboto-Light.ttf');
+}
         .titlebar {
             height: 32px;
             width: 100%;
@@ -284,63 +291,59 @@
             <div class="border5"></div>
         </div>
         </script>
-        <div class="instances" id="instances" style="position: relative; top: 0; text-align: center;">
-            <br>
-            <p>KT Browser</p>
+        <div class="instances" id="instances" style="position: relative; top: 0; left:25px; margin-right:45px;">
+            <h3 style="margin-bottom: 10px;">About KT Browser</h3>
+            <p style="margin-top: 10px;">a browser built exclusively for Vietnamese community with many features and fast page loading speed.</p>
+            <h5 style="margin-bottom: 10px;">Version Infomation</h5>
+            <ul class="demo-list-two mdl-list">
+                    <li class="mdl-list__item mdl-list__item--two-line">
+                      <span class="mdl-list__item-primary-content">
+                        <span>KT Browser</span>
+                        <span id="ktbrowserver" class="mdl-list__item-sub-title"></span>
+                      </span>
+                      <span class="mdl-list__item-secondary-content">
+                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                      </span>
+                    </li>
+                    <li class="mdl-list__item mdl-list__item--two-line">
+                      <span class="mdl-list__item-primary-content">
+                        <span>Electron</span>
+                        <span id="electronver" class="mdl-list__item-sub-title"></span>
+                      </span>
+                      <span class="mdl-list__item-secondary-content">
+                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                      </span>
+                    </li>
+                    <li class="mdl-list__item mdl-list__item--two-line">
+                      <span class="mdl-list__item-primary-content">
+                        <span>NodeJS</span>
+                        <span id="nodever" class="mdl-list__item-sub-title"></span>
+                      </span>
+                      <span class="mdl-list__item-secondary-content">
+                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                      </span>
+                    </li>
+                    <li class="mdl-list__item mdl-list__item--two-line">
+                        <span class="mdl-list__item-primary-content">
+                          <span>libchromiumcontent</span>
+                          <span id="chromiumver" class="mdl-list__item-sub-title"></span>
+                        </span>
+                        <span class="mdl-list__item-secondary-content">
+                          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                        </span>
+                    </li>
+                    <li class="mdl-list__item mdl-list__item--two-line">
+                        <span class="mdl-list__item-primary-content">
+                          <span>v8</span>
+                          <span id="v8ver" class="mdl-list__item-sub-title"></span>
+                        </span>
+                        <span class="mdl-list__item-secondary-content">
+                          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                        </span>
+                    </li>
+                  </ul>
         </div>
     </div>
-    <script>
-        if ('require' in window) {
-            window.$ = window.jQuery = require('jquery');
-        }
-    </script>
-    <script src="js/jquery/jquery-3.1.0.min.js"></script>
-    <script>
-        (function ($) {
-
-            $.fn.visible = function (partial) {
-
-                var $t = $(this),
-                    $w = $(window),
-                    viewTop = $w.scrollTop(),
-                    viewBottom = viewTop + $w.height(),
-                    _top = $t.offset().top,
-                    _bottom = _top + $t.height(),
-                    compareTop = partial === true ? _bottom : _top,
-                    compareBottom = partial === true ? _top : _bottom;
-
-                return ((compareBottom <= viewBottom) && (compareTop >= viewTop));
-
-            };
-
-        })(jQuery);
-
-        var win = $(window);
-
-        var allMods = $(".module");
-
-        allMods.each(function (i, el) {
-            var el = $(el);
-            if (el.visible(true)) {
-                el.addClass("already-visible");
-            }
-        });
-
-        var poz = $(window).scrollTop();
-
-        win.scroll(function (event) {
-
-            allMods.each(function (i, el) {
-                var el = $(el);
-                if (el.visible(true)) {
-
-                    el.addClass("come-in");
-
-                }
-            });
-
-        });
-    </script>
     </div>
     <div>
         <script>
@@ -349,8 +352,6 @@
                 module = undefined;
             }
         </script>
-        <script src="js/jquery/jquery-3.1.0.min.js"></script>
-        <script src="js/jquery/jquery-ui.min.js"></script>
         <script>
             if (window.module) module = window.module;
         </script>
@@ -383,6 +384,11 @@
             $('.windowbutton-minimize').click(function () {
                 remote.getCurrentWindow().minimize();
             });
+            document.getElementById("ktbrowserver").innerHTML = remote.app.getVersion()
+            document.getElementById("electronver").innerHTML = remote.process.versions.electron
+            document.getElementById("chromiumver").innerHTML = remote.process.versions.chrome
+            document.getElementById("nodever").innerHTML = remote.process.versions.node
+            document.getElementById("v8ver").innerHTML = remote.process.versions.v8
         </script>
 </body>
 
