--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <script src="material.min.js"></script>
     <link rel="stylesheet" href="material.indigo-blue.min.css" />
     <link rel="stylesheet" href="js/materialdesign/css/materialdesign.css" type="text/css" />
-    <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery/jquery-3.1.0.min.js" onload="window.$ = window.jQuery = module.exports;"></script>    
+    <script src="js/jquery/autoTooltip.plugin.jQuery.min.js"></script>
     <style>
 @font-face {
 font-family: "Roboto";
@@ -47,8 +47,16 @@ src: url('fonts/Roboto-Light.ttf');
             width: 100%;
             background-color: rgba(0, 0, 0, 0.1);
         }
-    </style>
-    <style>
+
+        h3, p, h5, i {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            cursor: default;
+        }
+
         button,
         hr,
         input {
@@ -277,6 +285,157 @@ src: url('fonts/Roboto-Light.ttf');
             display: none
         }
         /*# sourceMappingURL=normalize.min.css.map */
+
+                .tooltip {
+            background: rgba(80, 80, 80, .9);
+            color: #fff;
+            z-index: 999999;
+            position: absolute;
+            padding: 8px;
+            font-size: 12px;
+            border-radius: 2px;
+        }
+        /** Scale animation ****************/
+
+        .tooltip.animation-scale {
+            -webkit-animation-name: scaleTooltip;
+            -webkit-animation-duration: .2s;
+            -webkit-animation-timing-function: ease;
+            animation-name: scaleTooltip;
+            animation-duration: .2s;
+            animation-timing-function: ease;
+        }
+
+        @-webkit-keyframes scaleTooltip {
+            from {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+            to {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+        }
+
+        @keyframes scaleTooltip {
+            from {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+            to {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+        }
+        /**** Fade animation ****************/
+
+        .tooltip.animation-fade {
+            -webkit-animation-name: fadeTooltip;
+            -webkit-animation-duration: .2s;
+            -webkit-animation-timing-function: ease;
+            animation-name: fadeTooltip;
+            animation-duration: .2s;
+            animation-timoutg-function: ease;
+        }
+
+        @-webkit-keyframes fadeTooltip {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeTooltip {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+        /****  Slide animation   *************/
+
+        .tooltip.animation-slide {
+            -webkit-animation-name: slideTooltip;
+            -webkit-animation-duration: .2s;
+            -webkit-animation-timing-function: linear;
+            animation-name: slideTooltip;
+            animation-duration: .2s;
+            animation-timing-function: linear;
+        }
+
+        @-webkit-keyframes slideTooltip {
+            from {
+                -webkit-transform: translateY(-20%);
+                transform: translateY(-20%);
+                opacity: 0.2;
+            }
+            to {
+                -webkit-transform: translateY(0);
+                transform: translateY(0);
+                opacity: 0.2;
+            }
+        }
+
+        @keyframes slideTooltip {
+            from {
+                -webkit-transform: translateY(-20%);
+                transform: translateY(-20%);
+                opacity: 1;
+            }
+            to {
+                -webkit-transform: translateY(0);
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .tooltip .tooltip-arrow {
+            position: absolute;
+            border: 0px solid rgba(0, 0, 0, .9);
+        }
+
+        .tooltip-arrow.bottomtotop {
+            border-top-color: transparent;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            top: -16px;
+        }
+
+        .tooltip-arrow.toptobottom {
+            border-bottom-color: transparent;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            bottom: -16px;
+        }
+
+        .tooltip-arrow.righttoleft {
+            border-left-color: transparent;
+            border-bottom-color: transparent;
+            border-top-color: transparent;
+            left: -16px;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+
+        .tooltip-arrow.lefttoright {
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            border-top-color: transparent;
+            right: -16px;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+
+        .tooltip-arrow.center {
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
     </style>
 </head>
 
@@ -285,13 +444,14 @@ src: url('fonts/Roboto-Light.ttf');
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
+            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="windowbutton windowbutton-close"></div>
             <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
             <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
+            <div data-tooltip-text="Feedback" data-tooltip-position="bottom" class="windowbutton windowbutton-feedback"></div>
             <div class="border5"></div>
         </div>
         </script>
-        <div class="instances" id="instances" style="position: relative; top: 0; left:25px; margin-right:45px;">
+        <div class="instances" id="instances" style="position: static; top: 0px; margin-left: 30px; margin-right: 20px; width: auto;">
             <h3 style="margin-bottom: 10px;">About KT Browser</h3>
             <p style="margin-top: 10px;">a browser built exclusively for Vietnamese community with many features and fast page loading speed.</p>
             <h5 style="margin-bottom: 10px;">Version Infomation</h5>
@@ -302,7 +462,7 @@ src: url('fonts/Roboto-Light.ttf');
                         <span id="ktbrowserver" class="mdl-list__item-sub-title"></span>
                       </span>
                       <span class="mdl-list__item-secondary-content">
-                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                        <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/KTTECHTeam/KT-Browser');"><i class="material-icons">code</i></a>
                       </span>
                     </li>
                     <li class="mdl-list__item mdl-list__item--two-line">
@@ -311,7 +471,7 @@ src: url('fonts/Roboto-Light.ttf');
                         <span id="electronver" class="mdl-list__item-sub-title"></span>
                       </span>
                       <span class="mdl-list__item-secondary-content">
-                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                        <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/electron/electron');"><i class="material-icons">code</i></a>
                       </span>
                     </li>
                     <li class="mdl-list__item mdl-list__item--two-line">
@@ -320,7 +480,7 @@ src: url('fonts/Roboto-Light.ttf');
                         <span id="nodever" class="mdl-list__item-sub-title"></span>
                       </span>
                       <span class="mdl-list__item-secondary-content">
-                        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                        <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://nodejs.org');"><i class="material-icons">code</i></a>
                       </span>
                     </li>
                     <li class="mdl-list__item mdl-list__item--two-line">
@@ -329,7 +489,7 @@ src: url('fonts/Roboto-Light.ttf');
                           <span id="chromiumver" class="mdl-list__item-sub-title"></span>
                         </span>
                         <span class="mdl-list__item-secondary-content">
-                          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                          <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://www.chromium.org/');"><i class="material-icons">code</i></a>
                         </span>
                     </li>
                     <li class="mdl-list__item mdl-list__item--two-line">
@@ -338,10 +498,11 @@ src: url('fonts/Roboto-Light.ttf');
                           <span id="v8ver" class="mdl-list__item-sub-title"></span>
                         </span>
                         <span class="mdl-list__item-secondary-content">
-                          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">code</i></a>
+                          <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/v8/v8');"><i class="material-icons">code</i></a>
                         </span>
                     </li>
                   </ul>
+
         </div>
     </div>
     </div>
@@ -371,6 +532,7 @@ src: url('fonts/Roboto-Light.ttf');
         <script src="js/materialdesign/materialdesign.js"></script>
         <script>
             const {remote} = require('electron')
+            const shell = require('electron').shell;
             $('.windowbutton-close').click(function () {
                 remote.getCurrentWindow().close();
             });
@@ -384,11 +546,15 @@ src: url('fonts/Roboto-Light.ttf');
             $('.windowbutton-minimize').click(function () {
                 remote.getCurrentWindow().minimize();
             });
+            $('.windowbutton-feedback').click(function () {
+                shell.openExternal("mailto:admin@kt-browser.com");
+            });
             document.getElementById("ktbrowserver").innerHTML = remote.app.getVersion()
             document.getElementById("electronver").innerHTML = remote.process.versions.electron
             document.getElementById("chromiumver").innerHTML = remote.process.versions.chrome
             document.getElementById("nodever").innerHTML = remote.process.versions.node
             document.getElementById("v8ver").innerHTML = remote.process.versions.v8
+            $(".windowbutton").tooltip();
         </script>
 </body>
 
