Disable Edit Ad Filter Lists button

--- a/settings.html
+++ b/settings.html
@@ -361,7 +361,7 @@
 
                 </label>
                 <br></br>
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" disabled>
                     Edit Ad Blocking Filter Lists
                  </button>
                  <br></br>
