--- a/licenses.html
+++ b/licenses.html
@@ -87,6 +87,9 @@
       <li class="list-item">
         <a href="https://github.com/bbondy/abp-filter-parser">JavaScript Adblock Plus filter parser (Mozilla Public License 2.0)</a>
       </li>
+      <li class="list-item">
+        <a href="https://github.com/leeroybrun/node-mt-files-downloader">node-mt-files-downloader (MIT License)</a>
+      </li>
     </ul>
   </section>
 
